# SafeEyes

./: .gitignore  .pyre_configuration  pyproject.toml  setup.py
.pyre/: pyre.stderr
.pyre/classic/: server.stderr  server.stderr.2024_08_09_16_45_07_734627  server.stderr.2024_08_09_16_49_18_554154
debian/: control
rpm/: safeeyes-auto.spec.disabled  safeeyes.spec
rust_wl_bindings/: Cargo.toml  pyproject.toml
rust_wl_bindings/src/: lib.rs
safeeyes/: __main__.py  model.py  plugin_manager.py  safeeyes.py  translations.py  utility.py
safeeyes/glade/: about_dialog.glade  break_screen.glade  item_bool.glade  item_break.glade  item_int.glade  item_plugin.glade  item_text.glade  new_break.glade  required_plugin_dialog.glade  settings_break.glade  settings_dialog.glade  settings_plugin.glade
safeeyes/plugins/donotdisturb/: plugin.py
safeeyes/plugins/healthstats/: dependency_checker.py  plugin.py
safeeyes/plugins/limitconsecutiveskipping/: plugin.py
safeeyes/plugins/notification/: plugin.py
safeeyes/plugins/smartpause/: dependency_checker.py  plugin.py
safeeyes/plugins/trayicon/: dependency_checker.py  plugin.py
safeeyes/ui/: about_dialog.py  break_screen.py  required_plugin_dialog.py  settings_dialog.py
