[package]
name = "rust_wl_bindings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_wl_bindings"
crate-type = ["cdylib"]

[dependencies]
gdk4-wayland = { version = "0.7.2", features = ["wayland_crate"] }
glib = "0.18.5"
pyo3 = "0.19.0"
wayland-protocols = { version = "0.30.1", features = ["client", "staging"] }
wayland-client = { version = "0.30.2" }
wayland-backend = { version = "0.1.2", features = ["client_system"] }
anyhow = "1.0.79"
